--- a/code/whitevsnonwhite.Rmd
+++ b/code/whitevsnonwhite.Rmd
@@ -1,13 +1,26 @@
+---
+title: "whitevsnonwhite"
+author: "Lauren Henderson"
+date: "2024-07-23"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r data cleaning yay}
 library(tidyverse)
 library(rsample)
 library(glmnet)
+library(MASS)
 set.seed(3)
+setwd('C:/Users/lauri/OneDrive/Documents/COSMOS/healthy-aging-project')
+
 npha_data <- read_csv("data/NPHA-doctor-visits.csv")
 
 
-#clean data
-npha_data <- npha_data %>% 
-  filter(Race == 1) %>% 
+npha_data <- npha_data %>%
   mutate(`Phyiscal Health` = case_when(`Phyiscal Health` == 2 ~ 1,
                                        `Phyiscal Health` == 5 ~ 4,
                                        .default = `Phyiscal Health`),
@@ -23,8 +36,7 @@ npha_data <- npha_data %>%
   mutate(`Trouble Sleeping` = case_when(`Trouble Sleeping` == 2 ~1, .default = `Trouble Sleeping`)) %>% 
   mutate(`Prescription Sleep Medication` = case_when(`Prescription Sleep Medication` == 2 ~1, .default = `Prescription Sleep Medication`)) %>% 
   mutate(Race = case_when(Race != 1 ~ 0, .default = Race)) %>% 
-  mutate_all(as.factor) %>%
-  select(-Age)
+  dplyr::select(-Age)
 
 npha_data <- npha_data %>% 
   mutate(Physical_Health = `Phyiscal Health`,
@@ -40,26 +52,75 @@ npha_data <- npha_data %>%
          Prescription_Sleep_Medication = `Prescription Sleep Medication`,
          Race = Race,
          .keep = "unused") %>% 
-  select(-Race)
+        mutate_all(as.factor)
+
+```
 
 
-dummies <- as.data.frame(model.matrix(~.-1, npha_data))
-data_split <- initial_split(dummies, prop = 0.3)
+
+```{r white}
+white <- npha_data %>% 
+  filter(Race == 1)
+
+
+data_split <- initial_split(white, prop = 0.7)
 #need to drop response variables
+train <- training(data_split)
+test <- testing(data_split)
 
-train_x <- training(data_split) %>% select(-`Number of Doctors Visited`, -1:-3) %>% as.matrix()
-train_y <- training(data_split) %>% select(`Number of Doctors Visited`) %>% as.matrix()
+test_x <- test %>% 
+          dplyr::select(-`Number of Doctors Visited`)
 
-test_x <- testing(data_split) %>% select(-`Number of Doctors Visited`, -1:-3)%>% as.matrix()
-test_y <- testing(data_split) %>% select(`Number of Doctors Visited`)%>% as.matrix()
+test_y <- test$`Number of Doctors Visited`
+
+mod <- polr(`Number of Doctors Visited` ~ ., data = train, Hess =TRUE, method = "cloglog")
+
+ctable_white <- coef(summary(mod))
+p <- pnorm(abs(ctable_white[,"t value"]), lower.tail = FALSE) * 2
+ctable_white <- cbind(ctable_white, "p value" = p)
+
+ctable_white
+
+```
 
 
-#fit model with lasso
+```{r}
+nonwhite <- npha_data %>% 
+  filter(Race != 1)
 
-fit <- cv.glmnet(train_x,train_y,  family = "binomial", type.measure = "class", nfolds = 10)
 
-preds <- predict(fit, newx = test_x, type = "class", s = "lambda.min")
+data_split <- initial_split(nonwhite, prop = 0.7)
+#need to drop response variables
+train <- training(data_split)
+test <- testing(data_split)
 
-mean(preds == test_y)
+test_x <- test %>% 
+          dplyr::select(-`Number of Doctors Visited`)
 
-coef(fit)
+test_y <- test$`Number of Doctors Visited`
+
+mod <- polr(`Number of Doctors Visited` ~ ., data = train, Hess =TRUE, method = "cloglog")
+
+
+
+ctable_nonwhite <- coef(summary(mod))
+p <- pnorm(abs(ctable_nonwhite[,"t value"]), lower.tail = FALSE) * 2
+ctable_nonwhite <- cbind(ctable_nonwhite, "p value" = p)
+
+ctable_nonwhite
+
+
+
+filtered_nonwhite <- ctable_nonwhite[,c(1,4)]
+
+filtered_white <- ctable_white[,c(1,4)]
+
+ctable <- cbind(filtered_white, filtered_nonwhite) %>% `colnames<-`(c("White Coef", "White P-Values", "Non-White Coef", "Non-White P-Values")) 
+apply(ctable, 2, function(x){round(x,digits = 4)})
+
+
+
+```
+
+
+
